--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ https://templatemo.com/tm-508-power
                     <div class="col-md-12">
                         <h4>¿Necesitas facturar?</h4>
                         <h6></h6>
-                        <div class="border-button"><a href="#portfolio">Discover More</a></div>
+                        <div class="border-button"><a href="#portfolio">Facturación</a></div>
                     </div>
                 </div>
             </div>
