--- a/index.html
+++ b/index.html
@@ -174,48 +174,12 @@ https://templatemo.com/tm-508-power
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-heading">
-                            <h4>Contact Us</h4>
-                            <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In hac habitasse platea dictumst.</p>
+                            <h4>Contacto</h4>
+                            <p>Visítanos: Calz Abastos 170, Abastos,<br>27020 Torreón, Coah. <br>Tel: (871)7-17-93-23<br> confiamexgasolineras@hotmail.com</p>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <form id="contact" action="#" method="post">
-                            <div class="row">
-                                <div class="col-md-6">
-                                  <fieldset>
-                                    <input name="name" type="text" class="form-control" id="name" placeholder="Name..." required="">
-                                  </fieldset>
-                                </div>
-                                <div class="col-md-6">
-                                  <fieldset>
-                                    <input name="email" type="email" class="form-control" id="email" placeholder="Email..." required="">
-                                  </fieldset>
-                                </div>
-                                 <div class="col-md-6">
-                                  <fieldset>
-                                    <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject..." required="">
-                                  </fieldset>
-                                </div>
-                                <div class="col-md-6">
-                                  <fieldset>
-                                    <input name="phone" type="phone" class="form-control" id="phone" placeholder="Phone..." required="">
-                                  </fieldset>
-                                </div>
-                                <div class="col-md-12">
-                                  <fieldset>
-                                    <textarea name="message" rows="6" class="form-control" id="message" placeholder="Message..." required=""></textarea>
-                                  </fieldset>
-                                </div>
-                                <div class="col-md-12">
-                                  <fieldset>
-                                    <button type="submit" id="form-submit" class="btn">Send your message</button>
-                                  </fieldset>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
+  
                     <div class="col-md-6">
                         <div id="map">
 	<!-- How to change your own map point
