--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ https://templatemo.com/tm-508-power
                     <div class="col-md-12">
                         <div class="section-heading">
                             <h4>Contacto</h4>
-                            <p>Visítanos: Calz Abastos 170, Abastos,<br>27020 Torreón, Coah. <br>Tel: (871)7-17-93-23<br> confiamexgasolineras@hotmail.com</p>
+                            <p>Visítanos: Calz Abastos 170, Abastos,<br>27020 Torreón, Coah. <br>Tel: (871)7-17-93-23<br>confiamexgasolineras@hotmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -201,8 +201,7 @@ https://templatemo.com/tm-508-power
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-sm-12">
-                            <p>Copyright &copy; 2020 Confiamex <br> 
-                            Design: TemplateMo</p>
+                            <p>Copyright &copy; 2020 Confiamex</p>
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <ul class="social-icons">
