--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
+	    <script type="text/javascript">
+		    var host = "confiamexabastos.com";
+		    if ((host == window.location.host) && (window.location.protocol != "https:"))
+		    window.location.protocol = "https";
+	    </script>
+	    
 <link rel="icon" type="image/png"  href="img/favicon.ico">
         <meta charset="utf-8">
+	    <link rel="canonical" href="https://www.confiamexabastos.com"/>
         <title>Confiamex</title>
     	<meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
